refactor: know chrome same-site effect on cookie